restored job for Coverity static code analysis